@@ -10,6 +10,7 @@ improvements, or fixing bugs.  Here is a list of those people.
 Achim Pietig		achim@pietig.com
 Aidan Thornton
 Andre Zepezauer		andre.zepezauer@student.uni-halle.de
+Bertrand Jacquin	bertrand@jacquin.bzh
 Hironobu SUZUKI		hironobu@h2np.net
 Jan Suhr		jan@suhr.info
 Kaz Kojima		kkojima@rr.iij4u.or.jp
