@@ -1,6 +1,7 @@
 2015-07-28  Niibe Yutaka  <gniibe@fsij.org>
 
-	* tool/stlinkv2.py: Fix for Python3.
+	* tool/stlinkv2.py: Fix for Python3.  Thanks to Bertrand Jacquin.
+
 	* tool/gpg_agent.py: Fix for Python3.
 
 	* src/usb-msc.c: Update from Fraucheky.
